# devtools-course-theory

./: .gitignore  .gitmodules  .tags  .tags1  .travis.yml  CONTRIBUTING.md  README.md  course-program.md  course-todo.md  index.html  params.json
code/: CMakeLists.txt  README.md  alexandr-smirnov  build-and-test.sh  cpplint.py
code/aleksey-kostrov/: CMakeLists.txt  CTestTests.txt  Makefile  README.md
code/aleksey-kostrov-lab2/docs/: dihotomy_search.rst
code/aleksey-kostrov-lab2/include/: Dichotomy_Search.h
code/aleksey-kostrov/docs/: dihotomy_search.rst
code/aleksey-kostrov/include/: Dichotomy_Search.h
code/aleksey-kostrov/sample/: Dichotomy_Search_sample.cpp
code/aleksey-kostrov/samples/: samples.cpp
code/aleksey-kostrov/src/: Dichotomy_Search.cpp
code/aleksey-kostrov/test/: Dichotomy_Search_test.cpp  application_test.cpp  test_main.cpp
code/aleksey-nesmelov/: CMakeLists.txt  CTestTests.txt  Makefile  README.md
code/aleksey-nesmelov/docs/: fractcalc.rst
code/aleksey-nesmelov/include/: fractcalc.h  fractcalc.hpp
code/aleksey-nesmelov/sample/: Fraction.cpp
code/aleksey-nesmelov/samples/: Fraction.cpp
code/aleksey-nesmelov/src/: fractcalc.cpp
code/aleksey-nesmelov/test/: application_test.cpp  fraction_calculator_test.cpp  test_main.cpp
code/alexandr-smirnov/: CMakeLists.txt  CTestTests.txt  Makefile  README.md
code/alexandr-smirnov/docs/: sort.rst
code/alexandr-smirnov/include/: sort.h  sort.hpp
code/alexandr-smirnov/sample/: sorter.cpp
code/alexandr-smirnov/samples/: sample.cpp
code/alexandr-smirnov/src/: sort.cpp
code/alexandr-smirnov/test/: application_test.cpp  sorter_test.cpp  test_main.cpp
code/andrey-golodyaev/: CMakeLists.txt  CTestTests.txt  Makefile  README.md
code/andrey-golodyaev/docs/: ComplexCalculator.rst
code/andrey-golodyaev/include/: complexcalc.h
code/andrey-golodyaev/sample/: ComplexCalculator.cpp
code/andrey-golodyaev/samples/: ComplexCalculator.cpp
code/andrey-golodyaev/src/: complexcalc.cpp
code/andrey-golodyaev/test/: application_test.cpp  complex_calculator_test.cpp  test_main.cpp
code/anna-zhbanova/: CMakeLists.txt  CTestTests.txt  Makefile  README.md
code/anna-zhbanova/docs/: Triangle.rst  Triangle.rst.txt
code/anna-zhbanova/include/: Point.hpp  PointXY.h  PointXY.hpp  Triangle.h  Triangle.hpp
code/anna-zhbanova/sample/: Triangle_sample.cpp
code/anna-zhbanova/samples/: Triangle_sample.cpp
code/anna-zhbanova/src/: Triangle.cpp
code/anna-zhbanova/test/: Application_test.cpp  Application_test.h  Application_test.hpp  Triangle_test.cpp  Triangle_test.h  Triangle_test.hpp  main_tast.cpp
code/denis-sabanov/: CMakeLists.txt  CTestTests.txt  Makefile  Readme.md
code/denis-sabanov/docs/: AreaConverter.rst  AreaConverter.rts
code/denis-sabanov/include/: AreaConverter.h
code/denis-sabanov/samples/: converter.cpp
code/denis-sabanov/src/: AreaConverter.cpp
code/denis-sabanov/test/: application_test.cpp  area_converter_test.cpp  test_main.cpp
code/denis-sabanov/tests/: application_test.cpp  application_test_refactored.cpp  area_converter_test.cpp  test_main.cpp
code/dmitriy-gorokhov/: CMakeLists.txt  CTestTests.txt  Makefile  README.md
code/dmitriy-gorokhov/docs/: QuadraticEquation.rst
code/dmitriy-gorokhov/include/: QuadraticEquation.h
code/dmitriy-gorokhov/sample/: QuadraticEquationSample.cpp  QuadraticEquation_sample.cpp
code/dmitriy-gorokhov/samples/: QuadraticEquation.cpp
code/dmitriy-gorokhov/src/: QuadraticEquation.cpp
code/dmitriy-gorokhov/test/: QuadraticEquationTest.cpp  QuadraticEquation_test.cpp  application_test.cpp  test_main.cpp
code/dmitry-vodopyanov/: CMakeLists.txt  CTestTests.txt  Makefile  README.md
code/dmitry-vodopyanov/docs/: lengthconvertor.rst
code/dmitry-vodopyanov/include/: LengthConvertor.h
code/dmitry-vodopyanov/sample/: LengthConvertor.cpp
code/dmitry-vodopyanov/samples/: LengthConvertor.cpp
code/dmitry-vodopyanov/src/: LengthConvertor.cpp
code/dmitry-vodopyanov/test/: application_test.cpp  application_test_refactored.cpp  length_convertor_test.cpp  simple_calculator_test.cpp  test_main.cpp
code/docs/source/: conf.py  index.rst
code/ilia-udalov/: CMakeLists.txt  CTestTests.txt  Makefile  README.md
code/ilia-udalov/docs/: regex.rst
code/ilia-udalov/include/: regex.h  regex.hpp
code/ilia-udalov/sample/: regex_sample.cpp
code/ilia-udalov/samples/: main.cpp  makefile
code/ilia-udalov/src/: main.cpp  makefile  regex.cpp  regex.h
code/ilia-udalov/test/: application_test.cpp  ex  example  main_test.cpp  regex_test.cpp
code/kirill-kornyakov/: README.md
code/kirill-kornyakov-lab2/: README.md
code/kirill-kornyakov-lab2/include/: simplecalc.h
code/kirill-kornyakov-lab3/: Makefile
code/kirill-kornyakov-lab3/docs/: simplecalc.rst
code/kirill-kornyakov-lab3/include/: simplecalc.hpp
code/kirill-kornyakov-lab3/samples/: calc.cpp
code/kirill-kornyakov-lab3/src/: simplecalc.cpp  simplecalc.hpp
code/kirill-kornyakov-lab4/: CMakeLists.txt  CTestTests.txt  README.md
code/kirill-kornyakov-lab4/include/: simplecalc.h
code/kirill-kornyakov-lab4/samples/: calc.cpp
code/kirill-kornyakov-lab4/test/: test.cpp
code/kirill-kornyakov-lab5/: CMakeLists.txt  CTestTests.txt  Makefile  README.md
code/kirill-kornyakov-lab5/docs/: simplecalc.rst
code/kirill-kornyakov-lab5/include/: simplecalc.h
code/kirill-kornyakov-lab5/sample/: calc.cpp
code/kirill-kornyakov-lab5/test/: application_test.cpp  application_test.hpp  application_test_refactored.cpp  application_test_refactored.hpp  (+3 more)
code/kirill-nikolaev/: CMakeLists.txt  CTestTests.txt  Makefile  README.md
code/ksenya-kochanova/: CMakeLists.txt  CTestTests.txt  Makefile  README.md
code/mihail-kupriyanov/: CMakeLists.txt  CTestTests.txt  Makefile  README.md
code/moshkov-yuriy/: ._Makefile  CMakeLists.txt  CTestTests.txt  Makefile  README.md
code/pavel-korotaev/: CMakeLists.txt  CTestTests.txt  Makefile  README.md
code/shiryaeva-vera/: Makefile  README.md  calc.exe.stackdump
code/vasiliy-kumaev/: CMakeLists.txt  CTestTests.txt  Makefile  README.md
(+248 files in other folders)
